--- a/Pages/SignIn.html
+++ b/Pages/SignIn.html
@@ -13,14 +13,14 @@
 </head>
 
 <body>
-    <form>
+    <!-- <form> -->
         <label for="email">Your email:</label>
         <input type="email" name="email" id="email"> <br>
         <label for="password">Your password:</label>
         <input type="password" name="password" id="password"> <br>
         <button id="sign-up">Sign up</button>
         <button id="sign-in">Sign in</button>
-    </form>
+    <!-- </form> -->
     
     <button id="check">Check sign in status</button>
     <div id="in">Signed in</div>
@@ -49,14 +49,12 @@
             if (auth.currentUser){
                 const inBox = document.querySelector("#in")
                 const outBox = document.querySelector("#out")
-                inBox.style.display = "block"
-                outBox.style.display = "none"
+                outBox.innerHTML = JSON.stringify(auth.currentUser)
             }
             else {
                 const inBox = document.querySelector("#in")
                 const outBox = document.querySelector("#out")
-                inBox.style.display = "none"
-                outBox.style.display = "block"
+                outBox.innerHTML = JSON.stringify(auth.currentUser)
             }
         }
         
