Update: changing js folder to script folder

--- a/Pages/SignIn.html
+++ b/Pages/SignIn.html
@@ -34,7 +34,7 @@
 
     <script defer src="../js/init-firebase.js" type="module"></script>
     <script type="module">
-        import { app } from "../js/init-firebase.js"
+        import { app } from "../script/init-firebase.js"
         import {
             getAuth,
             createUserWithEmailAndPassword,
