--- a/Pages/SignIn.html
+++ b/Pages/SignIn.html
@@ -32,7 +32,7 @@
         <button id="sign-out">Sign out</button>
     </div>
 
-    <script defer src="../js/init-firebase.js" type="module"></script>
+    <!-- <script defer src="../js/init-firebase.js" type="module"></script> -->
     <script type="module">
         import { app } from "../script/init-firebase.js"
         import {
