Update: localhost to production server

--- a/Pages/AllPost.html
+++ b/Pages/AllPost.html
@@ -52,7 +52,7 @@
     async function sendPost() {
         console.log("Add post: ", post)
 
-        const url = "http://localhost:3000/add";
+        const url = "https://simple-express-js-muddy-flower-7968.fly.dev/add";
         try {
             const response = await fetch(url, {
                 method: "POST",
