--- a/Pages/notification.html
+++ b/Pages/notification.html
@@ -4,53 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Activity</title>
-    <link rel="stylesheet" href="../css/notification.css">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/notification.css">
     <link rel="icon" type="image/x-icon" href="../images/favicon.svg">
 </head>
 <body>
     <main class="notifications">
-        <div class="notification-item" data-read="false" onclick="markAsRead(this)">
-            <div class="overlay"></div>
-            <div class="profile-pic">
-                <img src="https://i.pinimg.com/564x/30/68/fe/3068feecc66810f705ccec8500626428.jpg" alt="Profile Picture">
+        <header>
+            <h1>Notifications</h1>
+            <button class="mark-read">Mark all as read</button>
+        </header>
+        <div class="notification-settings">
+            <div class="left-settings">
+                <button class="tab active">All</button>
+                <button class="tab">Unread</button>
             </div>
-            <div class="notification-text">
-                <p><span class="notification-username">nezuni1812</span><span> • </span><span class="time">1 sec. ago</span></p>
-                <p>Commented on your post.</p>
-            </div>
-        </div>
-        <div class="notification-item" data-read="false" onclick="markAsRead(this)">
-            <div class="overlay"></div>
-            <div class="profile-pic">
-                <img src="https://i.pinimg.com/564x/30/68/fe/3068feecc66810f705ccec8500626428.jpg" alt="Profile Picture">
-            </div>
-            <div class="notification-text">
-                <p><span class="notification-username">nezuni1812</span><span> • </span><span class="time">15 min. ago</span></p>
-                <p>Liked on your photo.</p>
+            <div class="right-settings">
+                
             </div>
         </div>
-        <div class="notification-item" data-read="true">
-            <div class="overlay"></div>
-            <div class="profile-pic">
-                <img src="https://i.pinimg.com/564x/30/68/fe/3068feecc66810f705ccec8500626428.jpg" alt="Profile Picture">
-            </div>
-            <div class="notification-text">
-                <p><span class="notification-username">uyeernnhiiii</span><span> • </span><span class="time">2 hr. ago</span></p>
-                <p>Followed you.</p>
-            </div>
-        </div>
-        <div class="notification-item" data-read="true">
-            <div class="overlay"></div>
-            <div class="profile-pic">
-                <img src="https://i.pinimg.com/564x/30/68/fe/3068feecc66810f705ccec8500626428.jpg" alt="Profile Picture">
-            </div>
-            <div class="notification-text">
-                <p><span class="notification-username">uyeernnhiiii</span><span> • </span><span class="time">1 day ago</span></p>
-                <p>Liked on your post.</p>
-            </div>
-        </div>
-    </main>    
+        <div class="notifications-container"></div>
+    </main>     
     <script src="../script/notification.js"></script>
 </body>
 </html>
