--- a/Pages/SignUp.html
+++ b/Pages/SignUp.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/SignIn.css">
-    <title>Sign in to Flow</title>
+    <title>Get started with Flow</title>
     <style>
         .hide {
             display: none;
@@ -17,21 +17,22 @@
     <div class="main">
         <div class="content">
             <div class="actual-content">
-                <h2>Welcome back</h2>
+                <h2>Get started</h2>
                 <form action="javascript:void(0);">
                     <input type="email" name="email" id="email" placeholder="Enter your email">
                     <input type="password" name="password" id="password" placeholder="Enter your password">
-                    <div id="out" style="color: red"></div>
-                    <button id="sign-in">Sign in</button>
+                    <input type="password" name="password1" id="password" placeholder="Reenter your password">
+                    <button id="sign-up">Sign up</button>
                 </form>
                 <!-- <button id="check">Check sign in status</button>
                 <div id="in">Signed in</div>
+                <div id="out">No user</div>
                 <div id="secret">
                     <h3>Hello user</h3>
                     <p>This is me, your overlord to the portal of your personal information</p>
                     <button id="sign-out">Sign out</button>
                 </div> -->
-               <p>No account yet? <a href="SignUp.html">Sign up</a></p> 
+               <p>Already have an account? <a href="SignIn.html">Sign in</a></p> 
             </div>
         </div>
     </div>
@@ -52,11 +53,12 @@
         const check = async () => {
             if (auth.currentUser){
                 const inBox = document.querySelector("#in")
-                // const outBox = document.querySelector("#out")
-                // outBox.innerHTML = JSON.stringify(auth.currentUser)
+                const outBox = document.querySelector("#out")
+                outBox.innerHTML = JSON.stringify(auth.currentUser)
             }
             else {
                 const inBox = document.querySelector("#in")
+                const outBox = document.querySelector("#out")
                 outBox.innerHTML = JSON.stringify(auth.currentUser)
             }
         }
@@ -70,35 +72,32 @@
                     // Signed up 
                     console.log("Sign up succ")
                     const user = userCredential.user;
+                    // ...
                 })
                 .catch((error) => {
                     console.log("Failed")
                     const errorCode = error.code;
                     const errorMessage = error.message;
                     console.log(errorCode, errorMessage)
+                    // ..
                 });
         }
-        
+
         const signIn = async () => {
             const email = document.querySelector("#email").value;
             const password = document.querySelector("#password").value;
             signInWithEmailAndPassword(auth, email, password)
-            .then((userCredential) => {
-                // Signed in
-                console.log("Sign in succ")
-                const user = userCredential.user;
-                const outBox = document.querySelector("#out") 
-                outBox.innerHTML = JSON.stringify("") 
-                window.location.href = 'allpost.html'
-                // ...
-            })
-            .catch((error) => {
-                console.log("Failed")
-                const errorCode = error.code;
-                const errorMessage = error.message;
-                const outBox = document.querySelector("#out")
-                outBox.innerHTML = JSON.stringify(error.message)
-                console.log(errorCode, errorMessage)
+                .then((userCredential) => {
+                    // Signed in
+                    console.log("Sign in succ")
+                    const user = userCredential.user;
+                    // ...
+                })
+                .catch((error) => {
+                    console.log("Failed")
+                    const errorCode = error.code;
+                    const errorMessage = error.message;
+                    console.log(errorCode, errorMessage)
                     // ..
                 });
         }
@@ -108,8 +107,8 @@
             await signOut(auth)
         }
 
-        // const signUpButton = document.querySelector("#sign-up")
-        // signUpButton.addEventListener("click", signUp)
+        const signUpButton = document.querySelector("#sign-up")
+        signUpButton.addEventListener("click", signUp)
         const signInButton = document.querySelector("#sign-in")
         signInButton.addEventListener("click", signIn)
         const signOutButton = document.querySelector("#sign-out")
