full screen image

--- a/Pages/notification.html
+++ b/Pages/notification.html
@@ -6,6 +6,7 @@
     <title>Activity</title>
     <link rel="stylesheet" href="../css/notification.css">
     <link rel="icon" type="image/x-icon" href="../images/favicon.svg">
+    <link rel="stylesheet" href="../css/navigation-bar.css">
 </head>
 <body>
     <nav class="nav">
