--- a/Pages/search.html
+++ b/Pages/search.html
@@ -14,12 +14,13 @@
         <header>
             <h1>Search</h1>
         </header>
-        <div class="input-group rounded">
-            <span class="input-group-text border-0" id="search-addon">
-                <i class="--bs-secondary-bg fas fa-search"></i>
-            </span>
-            <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
-            
+        <div class="w-100 d-flex justify-content-center align-items-center mt-2">
+            <div class="form">
+                <img class="icon" src="../images/icon/search.svg">
+                <form>
+                    <input type="text" class="form-control form-input" id="search-value" name="search-value" placeholder="Search">
+                </form>
+            </div>
         </div>
         <div class="search-settings">
             
