--- a/Pages/Post.html
+++ b/Pages/Post.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/Post.css">
+    <link rel="stylesheet" href="../css/navigation-bar.css">
 </head>
 <body>
     <nav class="nav">
