add CSS for Post page

--- a/Pages/FeedDisplay.html
+++ b/Pages/FeedDisplay.html
@@ -72,7 +72,7 @@
         </div>  
     </nav>
     <div class="overlay" id="overlay"></div>
-    <div id="popup" class="post col-sm-12 col-md-8 col-lg-5">
+    <div id="popup" class="post col-11 col-md-8 col-lg-5">
         <div id="heading-add-post">
             <h1>New Post</h1>
             <p class="hover-element" onclick="togglePopup()">Cancel</p>
@@ -111,8 +111,7 @@
                     <img src="https://i.pinimg.com/564x/30/68/fe/3068feecc66810f705ccec8500626428.jpg" alt="Profile picture" class="profile-pic">
                 </div>
                 <div class="add-post-block" onclick="togglePopup()">
-                    <p class="comment-input hover-element" oninput="autoResize(this)">Share something...</p>
-                    <div id="imagePreview" class="image-preview"></div> 
+                    <p class="comment-input hover-element">Share something...</p>
                 </div>
             </div>
         </div>
@@ -146,5 +145,6 @@
         }
     </script>
     <link rel="stylesheet" href="../css/style.css"/>
+    <link rel="stylesheet" href="../css/add-post.css">
 </body>
 </html>
