--- a/Pages/otherProfile.html
+++ b/Pages/otherProfile.html
@@ -143,7 +143,7 @@
         </div>
 
         <div class="overlay" id="overlay"></div>
-        <div id="popup" class="post col-sm-12 col-md-8 col-lg-5">
+        <div id="popup" class="post col-11 col-md-8 col-lg-5">
             <div id="heading-add-post">
                 <h1>New Post</h1>
                 <p class="hover-element" onclick="togglePopup()">Cancel</p>
@@ -291,7 +291,7 @@
 </body>
 <link rel="stylesheet" href="../css/style.css"/>
 <link rel="stylesheet" href="../css/add-post.css">
-<script src="../script/bio.js"></script>
+<script src="../script/otherProfile.js"></script>
 <script src="../script/add-post.js"></script>
 
 <!-- <script defer type="module" src="../js/init-firebase.js"></script> -->
