add transistion for button

--- a/Pages/otherProfile.html
+++ b/Pages/otherProfile.html
@@ -13,7 +13,7 @@
     <link rel="icon" type="image/x-icon" href="../images/favicon.svg">
     <link rel="stylesheet" href="../css/navigation-bar.css">
     <link rel="stylesheet" href="../css/page-header.css">
-    <title>Full Name</title>
+    <title>Full Name (@username) • flow</title>
 </head>
 
 <body>
