--- a/Pages/SignIn.html
+++ b/Pages/SignIn.html
@@ -4,8 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/SignIn.css">
-    <title>Sign in to Flow</title>
+    <link rel="icon" type="image/x-icon" href="../images/favicon.svg">
+    <title>Sign in • flow</title>
     <style>
         .hide {
             display: none;
@@ -16,16 +22,30 @@
 <body>
     <div class="main">
         <img src="../images/logo.svg" alt="" srcset="">
-        <div class="content">
-            <div class="actual-content">
+        <div class="content col-12 col-md-5 col-lg-4 mx-auto d-flex justify-content-center">
+            <div class="actual-content mt-2">
                 <h2>Welcome back</h2>
                 <form action="javascript:void(0);">
-                    <input type="email" name="email" id="email" placeholder="Enter your email">
-                    <input type="password" name="password" id="password" placeholder="Enter your password">
+                    <!-- Email Field -->
+                    <div class="border-lable-flt">
+                        <input type="email" class="form-control" name="email" id="email" placeholder="Enter your Email" required>
+                        <label for="email">Email</label>
+                    </div>
+    
+                    <!-- Password Field -->
+                    <div class="mt-2 border-lable-flt">
+                        <input type="password" class="form-control" name="password" id="password" placeholder="Enter your password" required>
+                        <label for="password">Password</label>
+                    </div>
+                    <div class="text-end">
+                        <p><a href="ForgetPassword.html">Forget password?</a></p>
+                    </div>
                     <div id="out" style="color: red"></div>
+    
+                    <!-- Sign In Button -->
                     <button id="sign-in">Sign in</button>
                 </form>
-               <p>No account yet? <a href="SignUp.html">Sign up</a></p> 
+                <p>No account yet? <a href="SignUp.html">Sign up</a></p>
             </div>
         </div>
     </div>
