--- a/Pages/search.html
+++ b/Pages/search.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>flow</title>
+    <title>Search • flow</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -14,6 +14,15 @@
     <link rel="stylesheet" href="../css/FeedDisplay.css">
     <link rel="stylesheet" href="../css/navigation-bar.css">
     <link rel="stylesheet" href="../css/page-header.css">
+    <style>
+        .button {
+            transition: all 0.3s ease;
+        }
+
+        .button:active {
+            transform: scale(0.9);
+        }
+    </style>
 </head>
 <body>
     <nav class="nav">
