--- a/Pages/SignUp.html
+++ b/Pages/SignUp.html
@@ -85,6 +85,7 @@
         
         const signUp = async () => {
             window.location.href = 'SignIn.html'
+            return
             const email = document.querySelector("#email").value;
             const password = document.querySelector("#password").value;
             // console.log(email, password)
