relocate files for configuring to handlebars

--- a/Pages/AllPost.html
+++ b/Pages/AllPost.html
@@ -19,7 +19,7 @@
     <pre id="main-post"></pre>
 </body>
 <script type="module">
-    import { app } from "../script/init-firebase.js"
+    import { app } from "./script/init-firebase.js"
     import { getAuth } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js"
 
     const auth = getAuth(app);
