--- a/Pages/Post.html
+++ b/Pages/Post.html
@@ -9,10 +9,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/Post.css">
-    <link rel="icon" type="image/x-icon" href="../images/favicon.svg">
-    <link rel="stylesheet" href="../css/navigation-bar.css">
-    <link rel="stylesheet" href="../css/page-header.css">
+    <link rel="stylesheet" href="./css/Post.css">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.svg">
+    <link rel="stylesheet" href="./css/navigation-bar.css">
+    <link rel="stylesheet" href="./css/page-header.css">
     <style>
         .button {
             transition: all 0.3s ease;
@@ -27,7 +27,7 @@
     <nav class="nav">
         <div class="logo">
             <a href="#">
-                <img src="../images/favicon.svg">
+                <img src="./images/favicon.svg">
             </a>
         </div>
         <ul class="nav-list">
@@ -67,7 +67,7 @@
                 </li>
     
                 <li class="nav-item">
-                    <a href="./Bio.html" class="custom-nav-link">
+                    <a href="./Profile.html" class="custom-nav-link">
                         <svg viewBox="0 0 24 24" width="24" height="24" class="nav-icon">
                             <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2" fill="none" stroke="currentColor" stroke-width="2"/>
                             <circle cx="12" cy="7" r="4" fill="none" stroke="currentColor" stroke-width="2"/>
@@ -88,7 +88,7 @@
         <button class="page-back-button" onclick="goBack()">
             <svg width="24px" height="24px" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" fill="currentColor" stroke="currentColor" stroke-width="19.456"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path fill="currentColor" d="M224 480h640a32 32 0 1 1 0 64H224a32 32 0 0 1 0-64z"></path><path fill="currentColor" d="m237.248 512 265.408 265.344a32 32 0 0 1-45.312 45.312l-288-288a32 32 0 0 1 0-45.312l288-288a32 32 0 1 1 45.312 45.312L237.248 512z"></path></g></svg>
         </button>
-        <img class="page-title" src="../images/logo.svg" onclick="scrollToTop()" style="cursor: pointer;">
+        <img class="page-title" src="./images/logo.svg" onclick="scrollToTop()" style="cursor: pointer;">
         <!-- <h2 class="page-title">Thread</h2> -->
         <div class="page-options" id="sign-out-btn-profile"> 
             <div class="sign-out-item">
@@ -214,9 +214,9 @@
             </form>
         </div>
     </div>
-    <link rel="stylesheet" href="../css/style.css"/>
-    <link rel="stylesheet" href="../css/add-post.css">
-    <script src="../script/Post.js"></script>
+    <link rel="stylesheet" href="./css/style.css"/>
+    <link rel="stylesheet" href="./css/add-post.css">
+    <script src="./script/Post.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {        
             const postInput = document.querySelector('.comment-input-text');
