--- a/Pages/SignIn.html
+++ b/Pages/SignIn.html
@@ -9,8 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/SignIn.css">
-    <link rel="icon" type="image/x-icon" href="../images/favicon.svg">
+    <link rel="stylesheet" href="./css/SignIn.css">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.svg">
     <title>Sign in • flow</title>
     <style>
         .hide {
@@ -21,7 +21,7 @@
 
 <body>
     <div class="main">
-        <img src="../images/logo.svg" alt="" srcset="">
+        <img src="./images/logo.svg" alt="" srcset="">
         <div class="content col-12 col-md-5 col-lg-4 mx-auto d-flex justify-content-center">
             <div class="actual-content mt-2">
                 <h2>Welcome back</h2>
@@ -52,7 +52,7 @@
 
     <!-- <script defer src="../js/init-firebase.js" type="module"></script> -->
     <script type="module">
-        import { app } from "../script/init-firebase.js"
+        import { app } from "./script/init-firebase.js"
         import {
             getAuth,
             createUserWithEmailAndPassword,
