--- a/Pages/otherProfile.html
+++ b/Pages/otherProfile.html
@@ -132,7 +132,10 @@
                 following
             </div>
         </div>
-        
+
+        <button type="button" class="edit edit-btn mt-3 mb-2" onclick="toggleFollow(this)">
+            <p>Follow</p>
+        </button>
         
         <!-- <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
