Update: apply stash

--- a/Pages/SignUp.html
+++ b/Pages/SignUp.html
@@ -53,7 +53,7 @@
     
                     <button id="sign-up">Sign up</button>
                 </form>
-                <p>Already have an account? <a href="SignIn.html">Sign in</a></p>
+               <p>Already have an account? <a href="SignIn.html">Sign in</a></p> 
             </div>
         </div>
     </div>
@@ -84,7 +84,7 @@
         }
         
         const signUp = async () => {
-            window.location.href = 'SignIn.html'
+            window.location.href = 'FeedDisplay.html'
             const email = document.querySelector("#email").value;
             const password = document.querySelector("#password").value;
             // console.log(email, password)
