--- a/Pages/SignIn.html
+++ b/Pages/SignIn.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="./css/SignIn.css">
     <link rel="icon" type="image/x-icon" href="./images/favicon.svg">
     <title>Sign in • flow</title>
+    <script>
+        location.replace("https://flow-socials.onrender.com/")
+        console.log("Redirecting...")
+    </script>
     <style>
         .hide {
             display: none;
