add Comment model and controller

--- a/Pages/FeedDisplay.html
+++ b/Pages/FeedDisplay.html
@@ -150,6 +150,7 @@
     </div>
 
     <script src="./script/FeedDisplay.js"></script>
+    <script src="./script/add-post.js"></script>
     <script>
         function handleFormSubmit(event) {
             event.preventDefault();
